# Vtr

./: .gitignore  AGENTS.md  BENCHMARKS.md  LICENSE  README.md  ROADMAP.md  benchmark_merkle_loop.py  commit_message.txt  fix_validator.py  pr_body.txt  pyproject.toml
docs/: REDTEAM_ANALYSIS.md  economics.md
docs/archive/: economics_v1.md
examples/: demo_app.py
ingests/: digest_20251228_040945.txt  digest_20260419_011039.txt  digest_20260419_011103.txt  digest_20260514_001610.txt  digest_20260515_102347.txt  digest_20260515_105227.txt  digest_20260515_105540.txt  digest_20260515_110526.txt  digest_20260515_111918.txt  digest_20260515_113011.txt  digest_20260515_114303.txt  digest_20260515_153548.txt  digest_20260515_155000.txt  digest_20260515_173308.txt
logs/: STANDUP_HISTORY.md  TEAM_MEMORY.md
poc/: merkle.py  mock_prnu.py  test_validator_crash.py  validator.py  vtr_container.py
scripts/: ingest_manager.py  test_ingest_manager.py
specs/: RFC-001-core.md  RFC-002-prnu.md
vtr-standard/: AUTHORS.md  LICENSE.md  README.md
vtr-standard/docs/: economics.md
vtr-standard/poc/: merkle.py  mock_prnu.py  validator.py  vtr_container.py
vtr-standard/poc/tests/: test_merkle_fix.py
vtr_standard/: README.md
vtr_standard/poc/: LICENSE  __init__.py  cli.py  config.py  legacy.py  merkle.py  mock_prnu.py  schemas.py  validator.py  vtr_container.py
vtr_standard/poc/tests/: common.py  test_chain_failure.py  test_cli.py  test_config.py  test_kdf_strength.py  test_legal_assertions.py  test_merkle.py  test_merkle_compatibility.py  test_merkle_fix.py  test_mock_prnu_logic.py  test_production_lock.py  test_schemas.py  (+6 more)
vtr_standard/specs/: RFC-001-core.md  RFC-002-prnu.md
vtr_standard/whitepaper/: vtr-whitepaper-v2.md
whitepaper/: vtr-whitepaper-v2.md
