[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vtr_standard"
version = "0.2.0"
description = "The Video Truth Record (.vtr) - Hardware-Signed Media Attribution"
readme = "README.md"
authors = [
  { name = "MnemOnicE)", email = "pucewhalez@proton.pm" },
]
license = { text = "VTR Public License (VTR-PL)" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Topic :: Security :: Cryptography",
    "Topic :: Multimedia :: Video",
]
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0",
]

[project.urls]
"Homepage" = "null"
"Bug Tracker" = "null"

[tool.setuptools.packages.find]
include = ["vtr_standard*"]
